--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.35.0
-pandas==2.2.2
+streamlit
+pandas
 matplotlib
-wordcloud==1.9.3
-requests==2.31.0
+wordcloud
+requests
 torch
-transformers==4.41.2
-scipy==1.13.1
+transformers
+scipy
